# Sim-to-Real-B601_BM-Workshop

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG  LICENSE  README.md  THIRD_PARTY_NOTICES  run_sim.sh  run_sim_b601.sh
docker/: env  (+2 more)
source/sim_to_real_so101/: pyproject.toml  setup.py
source/sim_to_real_so101/adapters/: __init__.py  stararm102.py
source/sim_to_real_so101/assets/: b601.py  so101.py
source/sim_to_real_so101/assets/hdri/: LICENCE  abandoned_garage_1k.exr  afrikaans_church_interior_1k.exr  blaubeuren_church_square_1k.exr  blaubeuren_night_1k.exr  blue_photo_studio_1k.exr  boma_1k.exr  brown_photostudio_01_1k.exr  burnt_warehouse_1k.exr  climbing_gym_1k.exr  creepy_bathroom_1k.exr  fireplace_1k.exr  hospital_room_2_1k.exr  metro_noord_1k.exr  monkstown_castle_1k.exr  moon_lab_1k.exr  moonlit_golf_1k.exr  outdoor_chapel_1k.exr  poly_haven_studio_1k.exr  rogland_moonlit_night_1k.exr  studio_small_03_1k.exr  studio_small_09_1k.exr  university_workshop_1k.exr  (+2 more)
source/sim_to_real_so101/gr00t_client/: embodiment_tags.py  policy.py  server_client.py  types.py  utils.py
source/sim_to_real_so101/mdp/: __init__.py  obs.py  resets.py  terms.py
source/sim_to_real_so101/scripts/: lerobot_agent.py  lerobot_eval.py  lerobot_push_dataset.py  list_envs.py  random_agent.py  stararm102_calibrate.py  zero_agent.py
source/sim_to_real_so101/tasks/: __init__.py  b601_vials_to_rack_env_cfg.py  so101_env_cfg.py  task_env_cfg.py  vials_to_rack_env_cfg.py
source/sim_to_real_so101/utils/: isaacsim_preflight.py  keyboard.py  lerobot_interface.py  lerobot_recorder.py
(+37 files in other folders)
